--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,6 +7,11 @@
   pointer-events: none;
 }
 
+ul {
+  padding-left: 0px;
+  list-style-type: none;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
